[gd_scene load_steps=2 format=3 uid="uid://b2mimhxcc5uut"]

[ext_resource type="Script" path="res://myproject/Subnodes/RelatedMotifChooser.gd" id="1_o16ri"]

[node name="RelatedMotifChooser" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 8
script = ExtResource("1_o16ri")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "[type]"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OKButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[connection signal="toggled" from="HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
